removed dto conversions in dto classes
The conversion is now done separately and the DTO classes have no "logic" methods