@@ -4,6 +4,7 @@ import com.api.springstudentsapi.entities.Registration;
 import com.api.springstudentsapi.entities.Student;
 import com.api.springstudentsapi.entities.Teacher;
 import com.api.springstudentsapi.entities.Teaching;
+import org.springframework.beans.BeanUtils;
 
 import java.util.Collection;
 import java.util.List;
@@ -15,8 +16,15 @@ public class DTOMapper {
         Stream<Student> studentsStream = studentList.stream();
         List<StudentDTO> studentDTOS =
                 studentsStream
-                        .map(student -> StudentDTO.convert(student))
-                        .collect(Collectors.toList());
+                        .map(student -> {
+                            StudentDTO studentDTO = new StudentDTO();
+                            BeanUtils.copyProperties(student, studentDTO);
+
+                            studentDTO.setEnrolledCourses(mapToEnrolledCoursesDTOList(student.getStudentRegistrations()));
+
+                            return studentDTO;
+                        })
+                        .toList();
 
         return studentDTOS;
     }
@@ -24,7 +32,12 @@ public class DTOMapper {
     public static List<EnrolledCourseDTO> mapToEnrolledCoursesDTOList(List<Registration> registrations) {
         Stream<Registration> registrationStream = registrations.stream();
         Stream<EnrolledCourseDTO> registrationDTOStream =
-                registrationStream.map(registration -> EnrolledCourseDTO.convert(registration));
+                registrationStream.map(registration -> {
+                    EnrolledCourseDTO enrolledCourseDTO = new EnrolledCourseDTO();
+                    BeanUtils.copyProperties(registration, enrolledCourseDTO);
+
+                    return enrolledCourseDTO;
+                });
 
         return registrationDTOStream.toList();
     }
@@ -32,7 +45,12 @@ public class DTOMapper {
     public static List<RegistrationDTO> mapToRegistrationDTOList(List<Registration> registrations) {
         Stream<Registration> registrationStream = registrations.stream();
         Stream<RegistrationDTO> registrationDTOStream =
-                registrationStream.map(registration -> RegistrationDTO.convert(registration));
+                registrationStream.map(registration -> {
+                    RegistrationDTO registrationDTO = new RegistrationDTO();
+                    BeanUtils.copyProperties(registration, registrationDTO);
+
+                    return registrationDTO;
+                });
 
         return registrationDTOStream.toList();
     }
@@ -40,7 +58,14 @@ public class DTOMapper {
     public static List<TeacherDTO> mapToTeachersList(List<Teacher> teachers){
         Stream<Teacher> teacherStream = teachers.stream();
         Stream<TeacherDTO> teacherDTOStream =
-                teacherStream.map(teacher -> TeacherDTO.convert(teacher));
+                teacherStream.map(teacher -> {
+                    TeacherDTO teacherDTO = new TeacherDTO();
+                    BeanUtils.copyProperties(teacher, teacherDTO);
+
+                    teacherDTO.setTeachingCourses(mapToTeachingCourseDTOList(teacher.getTeacherTeachings()));
+
+                    return teacherDTO;
+                });
 
         return teacherDTOStream.toList();
     }
@@ -48,7 +73,12 @@ public class DTOMapper {
     public static List<TeachingCourseDTO> mapToTeachingCourseDTOList(List<Teaching> teachings){
         Stream<Teaching> teachingStream = teachings.stream();
         Stream<TeachingCourseDTO> teachingCourseDTOStream =
-                teachingStream.map(teaching -> TeachingCourseDTO.convert(teaching));
+                teachingStream.map(teaching -> {
+                    TeachingCourseDTO teachingCourseDTO = new TeachingCourseDTO();
+                    BeanUtils.copyProperties(teaching, teachingCourseDTO);
+
+                    return teachingCourseDTO;
+                });
 
         return teachingCourseDTOStream.toList();
     }
